# sdk

./: .gitignore  Makefile  Makefile.inc  README.md  bindist.sh  ci.sh  common.mk  libcxx.sh  toolchain.mk  toolchain.sh
crt/: .gitignore  Makefile  crt.c  elf.h  gen_syscall_funcs.py  kernel.c  kernel.h  kernel_procio.c  klog.c  klog.h  mdbg.c  nid.c  nid.h  patch.c  patch.h  payload.h  rtld.c  rtld.h  rtld_dlfcn.c  rtld_dlfcn.h  rtld_payload.c  rtld_payload.h  rtld_so.c  rtld_so.h  rtld_sprx.c  rtld_sprx.h  stacktrace.c  stacktrace.h  syscall.c  syscall.h
host/: Makefile  elf_x86_64.x  prospero-ar  prospero-clang  prospero-clang++  prospero-lld  prospero-nm  prospero-objcopy  prospero-ranlib  prospero-strip
include/: Makefile
libc/: Makefile  __flt_rounds.c  arc4random.c  asctime_r.c  backtrace.c  cfgetospeed.c  ctime_r.c  dirfd.c  dlfcn.c  dlfnc.c  execlp.c  fflush_unlocked.c  fts.c  gmtime.c  grp.c  if_nametoindex.c  isatty.c  localtime.c  mbsnrtowcs.c  mktemp.c  mman.c  mount.c  namespace.h  netdb.c  nl_langinfo.c  no-locale.c  passwd.c  pipe2.c  popen.c  qsort_r.c  recvmmsg.c  regexec.c  sendmmsg.c  strcasecmp.c  strcasestr.c  syscalls.c  syslog.c  termios.c  times.c  tmpfile.c  (+2 more)
libm/: Makefile
libpthread/: Makefile
libufs/: Makefile
locale/: Makefile  wcsnrtombs.c
samples/hello_cmake/: CMakeLists.txt
sce_stubs/: Makefile  genstub.py  libSceAppInstUtil.c  libSceAudioOut.c  libSceFsInternalForVsh.c  libSceGLSlimVSH.c  libSceGnmDriverForNeoMode.c  libSceHttp.c  libSceImeDialog.c  libSceIpmi.c  libSceKeyboard.c  libSceNet.c  libSceNetCtl.c  libScePad.c  (+16 more)
(+1450 files in other folders)
